--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "fakerphp/faker": "^1.9",
         "mikey179/vfsstream": "^1.6",
         "phpunit/phpunit": "^9.1",
-        "symfony/var-dumper": "^5.3"
+        "symfony/var-dumper": "^5.3",
+        "barryvdh/laravel-ide-helper": "^2.10"
     },
     "suggest": {
         "ext-fileinfo": "Improves mime type detection for files"
