--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,53 @@
 {
-    "name": "codeigniter4/appstarter",
-    "type": "project",
-    "description": "CodeIgniter4 starter app",
-    "homepage": "https://codeigniter.com",
-    "license": "MIT",
-    "require": {
-        "php": "^8.0",
-        "codeigniter4/framework": "^4",
-        "nesbot/carbon": "^2.53",
-        "myth/auth": "^1.0",
-        "illuminate/support": "^8.64",
-        "nabcellent/codeigniter4-eloquent": "^1.0"
+  "name": "codeigniter4/appstarter",
+  "type": "project",
+  "description": "CodeIgniter4 starter app",
+  "homepage": "https://codeigniter.com",
+  "license": "MIT",
+  "require": {
+    "php": "^8.0",
+    "codeigniter4/framework": "^4",
+    "nesbot/carbon": "^2.53",
+    "myth/auth": "^1.0",
+    "illuminate/support": "^8.64",
+    "nabcellent/codeigniter4-eloquent": "^1.0",
+    "guzzlehttp/guzzle": "^7.0",
+    "ext-openssl": "*"
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.9",
+    "mikey179/vfsstream": "^1.6",
+    "phpunit/phpunit": "^9.1",
+    "symfony/var-dumper": "^5.3",
+    "barryvdh/laravel-ide-helper": "^2.10"
+  },
+  "suggest": {
+    "ext-fileinfo": "Improves mime type detection for files"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app",
+      "Config\\": "app/Config"
     },
-    "require-dev": {
-        "fakerphp/faker": "^1.9",
-        "mikey179/vfsstream": "^1.6",
-        "phpunit/phpunit": "^9.1",
-        "symfony/var-dumper": "^5.3",
-        "barryvdh/laravel-ide-helper": "^2.10"
-    },
-    "suggest": {
-        "ext-fileinfo": "Improves mime type detection for files"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app",
-            "Config\\": "app/Config"
-        },
-        "files": ["app/Helpers/helper.php"],
-        "exclude-from-classmap": [
-            "**/Database/Migrations/**"
-        ]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Support\\": "tests/_support"
-        }
-    },
-    "scripts": {
-        "test": "phpunit"
-    },
-    "support": {
-        "forum": "http://forum.codeigniter.com/",
-        "source": "https://github.com/codeigniter4/CodeIgniter4",
-        "slack": "https://codeigniterchat.slack.com"
+    "files": [
+      "app/Helpers/helper.php",
+      "app/Libraries/Mpesa/helpers.php"
+    ],
+    "exclude-from-classmap": [
+      "**/Database/Migrations/**"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\Support\\": "tests/_support"
     }
+  },
+  "scripts": {
+    "test": "phpunit"
+  },
+  "support": {
+    "forum": "http://forum.codeigniter.com/",
+    "source": "https://github.com/codeigniter4/CodeIgniter4",
+    "slack": "https://codeigniterchat.slack.com"
+  }
 }
