--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "fakerphp/faker": "^1.9",
     "mikey179/vfsstream": "^1.6",
     "phpunit/phpunit": "^9.1",
-    "symfony/var-dumper": "^5.3",
+    "symfony/var-dumper": "^5.3"
   },
   "suggest": {
     "ext-fileinfo": "Improves mime type detection for files"
