--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "nabcellent/codeigniter4-eloquent": "^1.0",
     "guzzlehttp/guzzle": "^7.0",
     "ext-openssl": "*",
-    "amrshawky/laravel-currency": "^4.0"
+    "amrshawky/laravel-currency": "^4.0",
+    "illuminate/notifications": "^8.69",
+    "dompdf/dompdf": "^1.0"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9",
