API - Oauth: Authentication litter than litmus🔥😎

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "amrshawky/laravel-currency": "^4.0",
     "illuminate/notifications": "^8.69",
     "dompdf/dompdf": "^1.0",
-    "bshaffer/oauth2-server-php": "^1.10"
+    "bshaffer/oauth2-server-php": "^1.10",
+    "ext-pdo": "*"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9",
